Fixed overflow issue in .dataList

--- a/wcfsetup/install/files/style/element/dl.scss
+++ b/wcfsetup/install/files/style/element/dl.scss
@@ -63,6 +63,8 @@ dl {
 	}
 	
 	&.dataList {
+		overflow: hidden;
+		
 		@include clearfix;
 		
 		> dt {
